[project]
name = "linkbay-auth"
version = "0.1.0"
description = "Sistema di autenticazione JWT per FastAPI - riutilizzabile e async"
authors = [
    {name = "Alessio Quagliara", email = "quagliara.alessio@gmail.com"},
]
dependencies = [
    "fastapi>=0.100.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "pydantic>=2.0.0",
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = ["pytest", "httpx", "pytest-asyncio"]

[build-system]
requires = ["setuptools>=45.0", "wheel"]
build-backend = "setuptools.build_meta"