[project]
name = "linkbay-auth"
version = "0.2.1"
description = "Sistema di autenticazione JWT per FastAPI - Production-ready con sicurezza avanzata"
authors = [
    {name = "Alessio Quagliara", email = "quagliara.alessio@gmail.com"},
]
dependencies = [
    "fastapi>=0.100.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0",
    "python-multipart>=0.0.6",
    "pydantic[email]>=2.0.0",
    "email-validator>=2.0.0",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}  # Usa questa sintassi
keywords = ["fastapi", "auth", "jwt", "security", "async"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",  # Aggiungi il classifier
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "flake8>=6.0.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]  # Usa una versione stabile
build-backend = "setuptools.build_meta"